--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -193,6 +193,8 @@ Error message and password prompt
 
 <li>dev resources</li>
 
+<li>Eco &amp; Responsable</li>
+
 <li>File Sorter</li>
 
 <li>Github repo</li>
@@ -203,9 +205,13 @@ Error message and password prompt
 
 <li>Markups</li>
 
+<li>Movies</li>
+
 <li>Or</li>
 
 <li>pw</li>
+
+<li>Python</li>
 
 <li>Resilience</li>
 
@@ -9140,7 +9146,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190201115954073" list="Week Todo Home" modified="20190201153739742" title="$:/StoryList">
+<div list="Home" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9200,8 +9206,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190131165226381" title="$:/temp/search">
-<pre></pre>
+<div created="20190114084246125" modified="20190212082530429" title="$:/temp/search">
+<pre>Python</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9327,13 +9333,31 @@ Error message and password prompt
 <div created="20190108084902699" modified="20190108084918227" title="$:/view">
 <pre>classic</pre>
 </div>
-<div created="20190131165226977" modified="20190131165330180" tags="epub" title="Books">
+<div created="20190131165226977" modified="20190213153032960" tags="epub" title="Books">
 <pre>```
+    
+        - 
+    Aude Lancelin
+        - Nietzsche le gai savoir
+        - Orwell
+        - Dostoivski
+        - Pier Paolo Pasolini
     misc:
+        - Célia Le Dressay - L'ostéopathie pour tous
+        - Shannara - Terry Brooks
         - Geoffrey Borne : Hacker Citizen
         - Flore Vasseur :
             - En bande organisée
             - Comment j'ai liquidé le siècle
+    André Stern :
+        - ...Et je ne suis jamais allé à l'école - Histoire d'une enfance heureuse
+    Michel Vaujour :
+        - Stefan Zweig - Le Joueur d'échecs
+    Alexandre Langlois:
+        - Srdja Popovic - Comment faire tomber un dictateur quand on est seul, tout petit, et sans armes
+        - Aristote - La Politique
+        - Diogène
+
     François Horn:
         - Joe Haldeman : The Forever War
         - Poul Anderson : Tau Zéro
@@ -9373,6 +9397,7 @@ Error message and password prompt
         - Lone Wolf 
         - House of the Sun 
     étienne chouard:
+        - Mad in USA - Michel Desmurget
         - Peter Gelderloos, Comment la non-violence protège l'état
     laurent obertone:
         - la france interdite
@@ -9401,7 +9426,7 @@ Error message and password prompt
 ```
 </pre>
 </div>
-<div created="20190108110103262" modified="20190108132839937" tags="todo dev" title="dev ideas" type="">
+<div created="20190108110103262" modified="20190206143547465" tags="todo dev" title="dev ideas" type="">
 <pre>* file sorter / duplicate hunter
 * aspirateur leno.frbb.net &gt; YAML &gt; TiddlyWiki
 * Alerte Vigie SOS
@@ -9450,6 +9475,8 @@ efficacité
 ```
 
 * aggrégateur de messageries (msn, facebook messenger, e-mail...)
+
+* automatisation du compte-rendu des votes de l'UE
 
 
 
@@ -9516,7 +9543,7 @@ https://github.com/remouk
 ```
 </pre>
 </div>
-<div created="20190108133939395" modified="20190111131113707" tags="dev" title="dev resources">
+<div created="20190108133939395" modified="20190213111500983" tags="dev" title="dev resources">
 <pre>! YAML
 * https://symfony.com/legacy/doc/reference/1_3/fr/02-yaml
 * https://fr.wikipedia.org/wiki/YAML
@@ -9534,7 +9561,26 @@ https://github.com/remouk
 
 ! Gestion d'exceptions Java &amp; streams :
 * https://www.javamex.com/tutorials/exceptions/exceptions_uncaught_handler.shtml
-* https://blog.zenika.com/2014/02/19/repenser-la-propagation-des-exceptions-avec-java-8/</pre>
+* https://blog.zenika.com/2014/02/19/repenser-la-propagation-des-exceptions-avec-java-8/
+
+! V
+* https://volt.ws/lang
+* https://volt.ws/</pre>
+</div>
+<div created="20190206142851225" modified="20190206143011635" tags="eco" title="Eco &amp; Responsable">
+<pre>! Made In France
+* https://www.le-tshirt-propre.fr/
+* https://www.missegle.com/
+
+! Eco
+* https://toogoodtogo.fr/fr
+* https://laffairedusiecle.net/
+* https://riendeneuf.org/
+* http://www.sorteztoutvert.fr/
+* https://www.boutiquezerodechet.com/
+* https://ecoblabla.com/
+
+racloir d'oreille / oriculi / cure-oreill https://www.boutiquezerodechet.com/salle-de-bain-zero-dechet/179-oriculi.html</pre>
 </div>
 <div created="20190119173755790" modified="20190123171606917" tags="" title="File Sorter">
 <pre>```
@@ -9565,7 +9611,7 @@ jeux
 * photos ? (big)
 * useful code snippets</pre>
 </div>
-<div created="20190108105358377" modified="20190130143729998" tags="home" title="Home">
+<div created="20190108105358377" modified="20190206142849083" tags="home" title="Home">
 <pre>* https://annuel.framapad.org/p/leno
 * https://github.com/lenopgm
 
@@ -9576,33 +9622,27 @@ jeux
 ! Food
 * https://myedenred.fr/
 * https://melchior.xcard.me
-* http://www.jenaimequetoi.fr/
-
-! Eco
-* https://toogoodtogo.fr/fr
-* https://laffairedusiecle.net/
-* https://riendeneuf.org/
-* http://www.sorteztoutvert.fr/
-* https://www.boutiquezerodechet.com/
-* https://ecoblabla.com/
-
-racloir d'oreille / oriculi / cure-oreill https://www.boutiquezerodechet.com/salle-de-bain-zero-dechet/179-oriculi.html</pre>
+* http://www.jenaimequetoi.fr/</pre>
 </div>
-<div created="20190109082447167" modified="20190109093922829" tags="todo" title="leboncoin">
+<div created="20190109082447167" modified="20190206143117204" tags="todo" title="leboncoin">
 <pre>* petits malins / sylvana family
 * lego https://www.leboncoin.fr/recherche/?text=lego&amp;regions=18&amp;departments=44&amp;location=Nantes
 * duplo
 
 * mousse de sol
+* tour de magie / prestidigitation
+* lampe de bureau
+* cercle à broder
 
 Trouver lien
 Tester alertes sur e-mail jetable</pre>
 </div>
-<div created="20190111131151776" modified="20190118101833335" tags="markups" title="Markups">
+<div created="20190111131151776" modified="20190211103013615" tags="markups" title="Markups">
 <pre>! Media
 * Arrêt sur Image : https://www.arretsurimages.net/
 * Disclose : https://disclose.ngo/
 * Les Crises : https://www.les-crises.fr/
+* Le Média : https://www.lemediatv.fr/
 
 ! Science
 * Explications Fourrier : http://www.jezzamon.com/fourier/index.html
@@ -9610,7 +9650,13 @@ Tester alertes sur e-mail jetable</pre>
 
 ! BD
 * SMBC : https://www.smbc-comics.com/
-* xkcd : https://xkcd.com/</pre>
+* xkcd : https://xkcd.com/
+
+https://forum.sexworkout.net/</pre>
+</div>
+<div created="20190206142550125" modified="20190206142612595" tags="" title="Movies">
+<pre>* IA
+* L'Homme Bicentenaire</pre>
 </div>
 <div created="20190116110303013" modified="20190116132053111" tags="gold" title="Or">
 <pre>* https://www.aucoffre.com/pieces/napoleon/napoleon-20-francs/produits-en-vente-1
@@ -9664,6 +9710,13 @@ macif          13229934 12/18
 https://ceausy.kadeosconnect.com/avantage/       kadeos.s.lemoine@xoxy.net 12/18
 ```
 </pre>
+</div>
+<div created="20190212082532922" modified="20190212112850591" tags="dev" title="Python" type="">
+<pre>* quick &amp; dirty Python programs : https://sebsauvage.net/python/programs.html
+* Python snippets : https://sebsauvage.net/python/snyppets/
+* stack Python 2019 : http://sametmax.com/stack-python-en-2019/
+* débuter Python en 2019 : https://bersace.cae.li/conseils-python-2019.html
+* IDE : VSCode : http://sametmax.com/je-fais-mon-coming-out/</pre>
 </div>
 <div created="20190115164338542" modified="20190116083632879" tags="todo prep" title="Resilience">
 <pre>* or physique https://www.resilience-urbaine.com/survivalisme-resilience/or-argent-stocker-metaux-precieux/
@@ -9783,13 +9836,15 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * https://fr.wikipedia.org/wiki/Affaire_des_poisons
 </pre>
 </div>
-<div created="20190110133143078" modified="20190131105747239" tags="markups" title="youtube">
+<div created="20190110133143078" modified="20190215083820013" tags="markups" title="youtube">
 <pre>* inside Jamel Comedy club :  https://www.youtube.com/results?search_query=inside+jamel+comedy+club
 * l'émifion : https://www.youtube.com/results?search_query=l%27%C3%A9mifion
 * JTerre : https://www.youtube.com/channel/UCDoKG5pBrK3XYntCEGal2-w/videos
 * Nicolas Meyrieux : https://www.youtube.com/user/NicolasMeyrieux/videos
 * zap&amp;john : https://www.youtube.com/user/johnkungfu/playlists
 * https://www.youtube.com/watch?v=axmpxbtzSZY&amp;list=LLs9ng4UmdBMeJL3Ym-HMPhw
+* PNL de Lausanne : https://www.youtube.com/channel/UCW54rpODMuow1A8v_aBnpig/videos
+* Hypnose : https://www.youtube.com/user/ARCHEvideo/videos
 
 ! ''High quality''
 * L'espace des sciences : https://www.youtube.com/user/Espacedessciences/videos
@@ -9800,9 +9855,11 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * Arrêt sur Image : https://www.youtube.com/channel/UCXHWT_QoQSsdGXbqF0hAMtg/videos
 * Grand Angle : https://www.youtube.com/channel/UCWtD8JN9hkxL5TJL_ktaNZA/videos
 * Le Réveilleur : https://www.youtube.com/channel/UC1EacOJoqsKaYxaDomTCTEQ/videos
+* Le Média : https://www.youtube.com/channel/UCT67YOMntJxfRnO_9bXDpvw/videos
 
 ! '' Humour''
 * Verino : https://www.youtube.com/user/verinojpr/videos
+* Verino+ : https://www.youtube.com/channel/UCeIfe01u41FBRyVFYW0_uHw/videos
 * Haroun : https://www.youtube.com/channel/UCKeL_a8Pu3bdt251ICPV8bA/videos
 * Dieudo : https://www.youtube.com/user/iamdieudo4/videos
 * Meurice : https://www.youtube.com/playlist?list=PL43OynbWaTMLEbdAWr-DnAfveOonmhlT1
@@ -9812,6 +9869,7 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * Science Etonnante : https://www.youtube.com/user/ScienceEtonnante/videos
 * MicMath : https://www.youtube.com/user/Micmaths/videos
 * CGP Grey : https://www.youtube.com/user/CGPGrey/videos
+* Micode : https://www.youtube.com/channel/UCYnvxJ-PKiGXo_tYXpWAC-w/videos
 
 ! ''Politique''
 * Demos Kratos : https://www.youtube.com/channel/UCnIGrvSrQF7uCovnIm8LCSQ/videos
@@ -9821,6 +9879,7 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 ! ''Media''
 * Fil d'Actu : https://www.youtube.com/channel/UC9hHeywcPBnLglqnQRaNShQ/videos
 * Bonjour Tristesse : https://www.youtube.com/channel/UCAFQjCZo5okIPkHUQlBZM-g/videos
+* Michel Collon : https://www.youtube.com/channel/UChq7IIJgKBr5cElD44Q6PlA/videos
 
 ! Divertissement
 * les parasites : https://www.youtube.com/channel/UCqS1gDNHEX3FgJ8dPfSuRoQ/videos
@@ -9828,6 +9887,7 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * Raptor : https://www.youtube.com/channel/UC_i-uMpN1lEyuoUGDq-dajQ/videos
 * Raptor live : https://www.youtube.com/channel/UCXwyeDdBEaLmrndrY8q_H4Q/videos
 * Philogynes : https://www.youtube.com/channel/UCBVb9MG9nXh0XMee6k44A3A/videos
+* Moodstep : https://www.youtube.com/user/Moodsteptube/videos
 </pre>
 </div>
 
