--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -137,6 +137,10 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/more-page-actions</li>
+
 <li>$:/core</li>
 
 <li>$:/DefaultTiddlers</li>
@@ -201,6 +205,8 @@ Error message and password prompt
 
 <li>Home</li>
 
+<li>Jeux</li>
+
 <li>leboncoin</li>
 
 <li>Markups</li>
@@ -233,6 +239,12 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20190218082840904" modified="20190218082844872" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
+<pre>hide</pre>
+</div>
+<div created="20190218082926488" modified="20190218082926488" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/more-page-actions">
+<pre>show</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.19">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -9140,13 +9152,13 @@ Error message and password prompt
 <div created="20190108084833171" modified="20190108105317510" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20190108104722609" modified="20190121080917232" title="$:/state/tab/moresidebar-1850697562">
+<div created="20190108104722609" modified="20190218084139984" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20190108101211875" modified="20190111131054064" title="$:/state/tab/sidebar--595412856">
+<div created="20190108101211875" modified="20190218082939645" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div list="Home" title="$:/StoryList">
+<div created="20190301083043877" list="Todo Books youtube Home" modified="20190301152649941" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9206,8 +9218,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190212082530429" title="$:/temp/search">
-<pre>Python</pre>
+<div created="20190114084246125" modified="20190218084143625" title="$:/temp/search">
+<pre></pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9333,16 +9345,31 @@ Error message and password prompt
 <div created="20190108084902699" modified="20190108084918227" title="$:/view">
 <pre>classic</pre>
 </div>
-<div created="20190131165226977" modified="20190213153032960" tags="epub" title="Books">
+<div created="20190131165226977" modified="20190301152556546" tags="epub" title="Books">
 <pre>```
     
-        - 
+    Comité Invisible https://fr.wikipedia.org/wiki/Comit%C3%A9_Invisible	https://fr.wikipedia.org/wiki/Affaire_de_Tarnac
+        - L'Insurrection qui vient
+        - À nos amis
+        - Maintenant
+    François Boulo
+        - Stephen Covey - Les 7 habitudes de ceux qui réalisent tout ce qu'ils entreprennent 
+        - BD &quot;The Economics&quot; (critique d'Adam Smith &amp; libéralisme)
     Aude Lancelin
         - Nietzsche le gai savoir
         - Orwell
         - Dostoivski
         - Pier Paolo Pasolini
     misc:
+        - Bernanos - La France contre les robots
+        - Attente de Dieu - Simone Veil
+        - Edward L. Bernays - Propaganda 1928
+        - Faulkner - Light in August (Lumière d'aôut)
+        - Dostoïovski Les Carnets du Sous-sol
+        - Juan Branco Le Crépuscule	(-&gt; 2ème édition)
+	https://static.mediapart.fr/files/2018/12/11/macron-et-son-crepuscule.pdf
+	http://branco.blog.lemonde.fr/files/2018/12/Macron-et-son-Crepuscule.pdf
+	http://www.gillesclement.com/fichiers/_communique_02518_macron-et-son-crepuscule-3.pdf
         - Célia Le Dressay - L'ostéopathie pour tous
         - Shannara - Terry Brooks
         - Geoffrey Borne : Hacker Citizen
@@ -9543,7 +9570,7 @@ https://github.com/remouk
 ```
 </pre>
 </div>
-<div created="20190108133939395" modified="20190213111500983" tags="dev" title="dev resources">
+<div created="20190108133939395" modified="20190227112648656" tags="dev" title="dev resources">
 <pre>! YAML
 * https://symfony.com/legacy/doc/reference/1_3/fr/02-yaml
 * https://fr.wikipedia.org/wiki/YAML
@@ -9565,7 +9592,10 @@ https://github.com/remouk
 
 ! V
 * https://volt.ws/lang
-* https://volt.ws/</pre>
+* https://volt.ws/
+
+! blockchain
+* http://hackingdistributed.com/2017/08/13/cost-of-decent/</pre>
 </div>
 <div created="20190206142851225" modified="20190206143011635" tags="eco" title="Eco &amp; Responsable">
 <pre>! Made In France
@@ -9624,6 +9654,27 @@ jeux
 * https://melchior.xcard.me
 * http://www.jenaimequetoi.fr/</pre>
 </div>
+<div created="20190301152607987" modified="20190301152637157" tags="" title="Jeux">
+<pre>
+```
+Darkest Dungeon				rpg 2D
+Divinity original sin		rpg BG-like
+binding of isaac / binding of isaac rebirth
+crypt of the necrodancer	rogue-like musical
+FTL: Faster Than Light
+battle realms				RTS L5R
+
+Elite:Dangerous
+Europa Universalis
+Kerbal Space Program
+Killing Floor 2
+Besiege
+Cities Skylines
+Pillars of Eternity
+
+```
+</pre>
+</div>
 <div created="20190109082447167" modified="20190206143117204" tags="todo" title="leboncoin">
 <pre>* petits malins / sylvana family
 * lego https://www.leboncoin.fr/recherche/?text=lego&amp;regions=18&amp;departments=44&amp;location=Nantes
@@ -9664,7 +9715,7 @@ https://forum.sexworkout.net/</pre>
 NB : Nous vous adresserons un devis séparé pour la livraison. Vous pouvez aussi obtenir une évaluation immédiate aux heures ouvrées en appelant un conseiller au :
 01 42 12 80 84.</pre>
 </div>
-<div created="20190130144059269" modified="20190130144212487" tags="pw" title="pw">
+<div created="20190130144059269" modified="20190218084608399" tags="pw" title="pw">
 <pre>```
 impots.gouv.fr =&gt; 1200125072181 / i 5/17
 moncompteactivite.gouv.fr =&gt; 184014410977526 M12/18    cf https://intra.ausy.fr/publish/universite/Guide%20d'utilisation%20Consultant.pdf
@@ -9693,7 +9744,7 @@ IZY =&gt; http://dpparis.ozyclub.eu/?p=435 =&gt; 001368 / date de naissance JJMM
 ants.gouv.fr =&gt; G 2/18
 ulule =&gt; 3/18
 myedenred =&gt; E 3/18 edenred.s.lemoine@xoxy.net
-NGE =&gt; 3/17
+NGE =&gt; s.l@y.c 3/17
 natixis =&gt; natixis.s.lemoine@xoxy.net n° entreprise 06962 code serveur 14290097 mdp:00xxxxxx où xxxxxx=n°troll MH
 romaricbriand.fr/forum =&gt; romaricbriand.osef.osef@xoxy.net 6/18
 paypal =&gt; &lt;mail yahoo&gt;
@@ -9711,12 +9762,17 @@ https://ceausy.kadeosconnect.com/avantage/       kadeos.s.lemoine@xoxy.net 12/18
 ```
 </pre>
 </div>
-<div created="20190212082532922" modified="20190212112850591" tags="dev" title="Python" type="">
-<pre>* quick &amp; dirty Python programs : https://sebsauvage.net/python/programs.html
+<div created="20190212082532922" modified="20190218084048674" tags="dev" title="Python" type="">
+<pre>* tuto : https://docs.python.org/3.6/tutorial/controlflow.html
+
+* quick &amp; dirty Python programs : https://sebsauvage.net/python/programs.html
 * Python snippets : https://sebsauvage.net/python/snyppets/
+
 * stack Python 2019 : http://sametmax.com/stack-python-en-2019/
 * débuter Python en 2019 : https://bersace.cae.li/conseils-python-2019.html
-* IDE : VSCode : http://sametmax.com/je-fais-mon-coming-out/</pre>
+
+* IDE : VSCode : http://sametmax.com/je-fais-mon-coming-out/
+* different installers : https://stevedower.id.au/blog/why-so-many-python-installers/</pre>
 </div>
 <div created="20190115164338542" modified="20190116083632879" tags="todo prep" title="Resilience">
 <pre>* or physique https://www.resilience-urbaine.com/survivalisme-resilience/or-argent-stocker-metaux-precieux/
@@ -9783,14 +9839,50 @@ A 21 ans j’ai choppé un molluscum contagiosum en couchant avec une fille renc
 
 En gros j’avais des mini verrues sur le pubis et la base de la verge qui étaient très inesthétiques et contagieuses pour mes futures partenaires. A l’époque mon père à qui je m’était confié a été hyper empathique, il m’a amené chez le dermato qui m’a grillé toutes les verrues à l’azote liquide. Il a fallu deux séances intenses pour tout faire disparaitre et que ça ne revienne plus. J’en rigole aujourd’hui mais ce fut assez douloureux.</pre>
 </div>
-<div created="20190130144237309" modified="20190131092631522" tags="" title="Todo">
-<pre>* renouvellement vignette NGE : jusqu'au 31 mars 2019
-* inscription école Emma
+<div created="20190130144237309" modified="20190301152933332" tags="" title="Todo">
+<pre>* renouvellement vignette NGE : jusqu'au 31 mars 2019 https://mon.nge-nantes.fr/espace/stationnement
+* inscription école Emma http://www.education.gouv.fr/cid161/l-inscription-a-l-ecole-maternelle.html
 * baptème Emma
 * préparation vacances Verino
 
 * recherche appart'/maison
-* utilisation formation continue CPF</pre>
+* utilisation formation continue CPF
+
+
+```
+RTTC	31 mai
+baptême	7 juillet
+formation
+salle 28 février
+
+https://fr.wikipedia.org/wiki/Lambda-calcul
+https://brice.coquereau.fr/2019/02/19/fr/chers-recruteurs/
+
+https://orientxxi.info/fr/video
+	1	https://www.youtube.com/watch?v=jl9s09LMp10
+	2	https://www.youtube.com/watch?v=rJkEzGid2DY
+	3	https://www.youtube.com/watch?v=A4N4Aj5q_do
+	4	https://www.youtube.com/watch?v=KjoPoUukWA0
+
+
+Ligue du LOL	https://fr.wikipedia.org/wiki/Ligue_du_LOL
+Michel Clouscard
+Pierre Kropotkine
+
+https://www.youtube.com/watch?v=3BIuTSK6Br4betterave
+http://les-intoxicateurs.over-blog.com/thierry-casasnovas-cru.html
+pomme
+curcuma
+ail
+piment
+
+betterave
+grenade
+curcuma
+gingembre
+
+```
+</pre>
 </div>
 <div created="20190108085325311" modified="20190201155125598" tags="todo" title="Week">
 <pre>! 1
@@ -9836,7 +9928,7 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * https://fr.wikipedia.org/wiki/Affaire_des_poisons
 </pre>
 </div>
-<div created="20190110133143078" modified="20190215083820013" tags="markups" title="youtube">
+<div created="20190110133143078" modified="20190228133625737" tags="markups" title="youtube">
 <pre>* inside Jamel Comedy club :  https://www.youtube.com/results?search_query=inside+jamel+comedy+club
 * l'émifion : https://www.youtube.com/results?search_query=l%27%C3%A9mifion
 * JTerre : https://www.youtube.com/channel/UCDoKG5pBrK3XYntCEGal2-w/videos
@@ -9888,6 +9980,11 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * Raptor live : https://www.youtube.com/channel/UCXwyeDdBEaLmrndrY8q_H4Q/videos
 * Philogynes : https://www.youtube.com/channel/UCBVb9MG9nXh0XMee6k44A3A/videos
 * Moodstep : https://www.youtube.com/user/Moodsteptube/videos
+
+! Prestidigitation
+* Sankey : https://www.youtube.com/user/SankeyMagic/videos
+* UHM : https://www.youtube.com/channel/UCtQlzpXl3Cv2kxzFsEX2mbw
+* MrTricksforfun : https://www.youtube.com/user/MrTricksforfun/videos
 </pre>
 </div>
 
