--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -191,6 +191,8 @@ Error message and password prompt
 
 <li>$:/view</li>
 
+<li>Bayes</li>
+
 <li>Books</li>
 
 <li>dev ideas</li>
@@ -205,21 +207,39 @@ Error message and password prompt
 
 <li>Home</li>
 
+<li>interests</li>
+
 <li>Jeux</li>
 
 <li>leboncoin</li>
+
+<li>Lowtech / lotek</li>
 
 <li>Markups</li>
 
 <li>Movies</li>
 
+<li>Nico Pène misc</li>
+
+<li>Olicard &amp; Ropers</li>
+
 <li>Or</li>
+
+<li>organisation</li>
+
+<li>Philogynes BIG5</li>
 
 <li>pw</li>
 
 <li>Python</li>
 
+<li>Regenere - jus lunettes</li>
+
 <li>Resilience</li>
+
+<li>S4ALL débattre</li>
+
+<li>security</li>
 
 <li>Sx</li>
 
@@ -9152,13 +9172,13 @@ Error message and password prompt
 <div created="20190108084833171" modified="20190108105317510" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20190108104722609" modified="20190218084139984" title="$:/state/tab/moresidebar-1850697562">
+<div created="20190108104722609" modified="20190301161447292" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20190108101211875" modified="20190218082939645" title="$:/state/tab/sidebar--595412856">
+<div created="20190108101211875" modified="20190301155039330" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190301083043877" list="Todo Books youtube Home" modified="20190301152649941" title="$:/StoryList">
+<div created="20190301083043877" list="Home" modified="20190301162907050" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9218,8 +9238,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190218084143625" title="$:/temp/search">
-<pre></pre>
+<div created="20190114084246125" modified="20190301154908952" title="$:/temp/search">
+<pre>onlin</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9345,9 +9365,15 @@ Error message and password prompt
 <div created="20190108084902699" modified="20190108084918227" title="$:/view">
 <pre>classic</pre>
 </div>
-<div created="20190131165226977" modified="20190301152556546" tags="epub" title="Books">
+<div created="20190301161735984" modified="20190301161750250" tags="bayes" title="Bayes" type="">
+<pre>https://fr.wikipedia.org/wiki/Paradoxe_des_prisonniers
+</pre>
+</div>
+<div created="20190131165226977" modified="20190301162226304" tags="epub" title="Books">
 <pre>```
-    
+    Vincent Cespedes
+        - Nietzsche : Aurore
+        - langage de programmation de philosophie / le jeu du Phoenix / https://fr.wikipedia.org/wiki/Le_Jeu_du_Ph%C3%A9nix
     Comité Invisible https://fr.wikipedia.org/wiki/Comit%C3%A9_Invisible	https://fr.wikipedia.org/wiki/Affaire_de_Tarnac
         - L'Insurrection qui vient
         - À nos amis
@@ -9361,6 +9387,9 @@ Error message and password prompt
         - Dostoivski
         - Pier Paolo Pasolini
     misc:
+        - Atlas Shrugged - Ayn Rand  https://archive.org/details/AtlasShrugged/page/n3
+        - Guy Debord - Le Société du Spectacle	https://fr.wikipedia.org/wiki/La_Soci%C3%A9t%C3%A9_du_spectacle_(livre)
+        - Gustave Lebon Psychologie des foules
         - Bernanos - La France contre les robots
         - Attente de Dieu - Simone Veil
         - Edward L. Bernays - Propaganda 1928
@@ -9570,7 +9599,7 @@ https://github.com/remouk
 ```
 </pre>
 </div>
-<div created="20190108133939395" modified="20190227112648656" tags="dev" title="dev resources">
+<div created="20190108133939395" modified="20190301162103114" tags="dev" title="dev resources">
 <pre>! YAML
 * https://symfony.com/legacy/doc/reference/1_3/fr/02-yaml
 * https://fr.wikipedia.org/wiki/YAML
@@ -9585,6 +9614,7 @@ https://github.com/remouk
 * What to consider when choosing colors for data visualization : https://blog.datawrapper.de/colors/
 * How Rational Clear Case Stole my Innocence and Nearly Ruined my Life : https://daedtech.com/how-rational-clear-case-stole-my-innocence-and-nearly-ruined-my-life/
 * Mutation testing for Java with PITest : https://automationrhapsody.com/mutation-testing-java-pitest/
+* http://web.archive.org/web/20091116121534/http://msmvps.com/blogs/jon_skeet/archive/2009/11/02/omg-ponies-aka-humanity-epic-fail.aspx
 
 ! Gestion d'exceptions Java &amp; streams :
 * https://www.javamex.com/tutorials/exceptions/exceptions_uncaught_handler.shtml
@@ -9595,7 +9625,10 @@ https://github.com/remouk
 * https://volt.ws/
 
 ! blockchain
-* http://hackingdistributed.com/2017/08/13/cost-of-decent/</pre>
+* http://hackingdistributed.com/2017/08/13/cost-of-decent/
+
+! SQL
+SELECT * FROM v$version;</pre>
 </div>
 <div created="20190206142851225" modified="20190206143011635" tags="eco" title="Eco &amp; Responsable">
 <pre>! Made In France
@@ -9654,6 +9687,22 @@ jeux
 * https://melchior.xcard.me
 * http://www.jenaimequetoi.fr/</pre>
 </div>
+<div created="20190301155806129" modified="20190301160916039" tags="" title="interests">
+<pre>* Bayesianism
+* questiologie
+
+* p2p
+* blockchain
+* robotique
+* IA
+* collapsologie
+* low-tech / lotek
+* pédocriminalité
+
+* sleight of hand
+* hypnose
+</pre>
+</div>
 <div created="20190301152607987" modified="20190301152637157" tags="" title="Jeux">
 <pre>
 ```
@@ -9688,6 +9737,11 @@ Pillars of Eternity
 Trouver lien
 Tester alertes sur e-mail jetable</pre>
 </div>
+<div created="20190301155403099" modified="20190301155519223" tags="lotek" title="Lowtech / lotek">
+<pre>* https://sebsauvage.net/auto/ : Différentes solutions low-tech d'auto-hébergement, privilégiant des logiciels sans base de données (La page n'est plus tout à fait à jour).
+* http://adrastia.org/
+* https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos</pre>
+</div>
 <div created="20190111131151776" modified="20190211103013615" tags="markups" title="Markups">
 <pre>! Media
 * Arrêt sur Image : https://www.arretsurimages.net/
@@ -9709,11 +9763,60 @@ https://forum.sexworkout.net/</pre>
 <pre>* IA
 * L'Homme Bicentenaire</pre>
 </div>
+<div created="20190301162423731" modified="20190301162450660" tags="fiche_lecture" title="Nico Pène misc">
+<pre>
+```
+méta-programme
+	- référence externe	: se fie aux opinions des autres pour prendre ses décisions -&gt; preuve sociale
+	- référence interne : propre avis personnel -&gt; &quot;vous seul savez&quot;, &quot;vous avez les cartes en main&quot;
+ne plus procrastiner
+	- se fixer des récompenses à faire une fois seulement la tâche accomplie
+loi de parkinson
+croyance limitante
+
+```
+</pre>
+</div>
+<div created="20190301161812373" modified="20190301161922389" tags="fiche_lecture" title="Olicard &amp; Ropers">
+<pre>https://www.youtube.com/watch?v=-v4xTtDcXwc
+
+
+```
+    &gt; machoire qui se serre
+    &gt; nez qui s'écarte
+    &gt; ...
+    &gt; https://www.youtube.com/redirect?q=http%3A%2F%2Fbit.ly%2Fguiderevo&amp;redir_token=9poizoxNDalBW-el09u4vu0V9ZV8MTU1MDE3NzE2MkAxNTUwMDkwNzYy&amp;event=video_description&amp;v=-v4xTtDcXwc
+    &gt; https://www.youtube.com/redirect?q=http%3A%2F%2Fbit.ly%2Fguide-sp&amp;redir_token=9poizoxNDalBW-el09u4vu0V9ZV8MTU1MDE3NzE2MkAxNTUwMDkwNzYy&amp;event=video_description&amp;v=-v4xTtDcXwc
+    &gt; https://www.youtube.com/redirect?q=http%3A%2F%2Fbit.ly%2Fself-defense-guide&amp;redir_token=9poizoxNDalBW-el09u4vu0V9ZV8MTU1MDE3NzE2MkAxNTUwMDkwNzYy&amp;event=video_description&amp;v=-v4xTtDcXwc
+    &gt; ancrage PNL
+    &gt; hypnose conversationnelle
+
+```
+</pre>
+</div>
 <div created="20190116110303013" modified="20190116132053111" tags="gold" title="Or">
 <pre>* https://www.aucoffre.com/pieces/napoleon/napoleon-20-francs/produits-en-vente-1
 * https://www.pieces-or.com/1-acheter-piece-boursable-or-Napoleon-20-Francs.html
 NB : Nous vous adresserons un devis séparé pour la livraison. Vous pouvez aussi obtenir une évaluation immédiate aux heures ouvrées en appelant un conseiller au :
 01 42 12 80 84.</pre>
+</div>
+<div created="20190301160416840" modified="20190301160530740" tags="" title="organisation">
+<pre>* fiches de lecture
+* liens entre tiddlers
+* hiérarchisation tiddlers / tags</pre>
+</div>
+<div created="20190301161125545" modified="20190301161230451" tags="fiche_lecture" title="Philogynes BIG5" type="">
+<pre>https://www.youtube.com/watch?v=jC3BsBPqDRA
+
+! neoPI
+* ouverture
+* consciencieux
+* extraversion
+* agréabilité
+* névrosisme
+
+* http://hexaco.org/questionnaire_quiz
+</pre>
 </div>
 <div created="20190130144059269" modified="20190218084608399" tags="pw" title="pw">
 <pre>```
@@ -9774,6 +9877,15 @@ https://ceausy.kadeosconnect.com/avantage/       kadeos.s.lemoine@xoxy.net 12/18
 * IDE : VSCode : http://sametmax.com/je-fais-mon-coming-out/
 * different installers : https://stevedower.id.au/blog/why-so-many-python-installers/</pre>
 </div>
+<div created="20190301162956576" modified="20190301163042570" tags="fiche_lecture" title="Regenere - jus lunettes">
+<pre>https://www.youtube.com/watch?v=3BIuTSK6Br4betterave
+
+* pomme
+* curcuma
+* ail
+* piment
+</pre>
+</div>
 <div created="20190115164338542" modified="20190116083632879" tags="todo prep" title="Resilience">
 <pre>* or physique https://www.resilience-urbaine.com/survivalisme-resilience/or-argent-stocker-metaux-precieux/
 * armement
@@ -9824,6 +9936,36 @@ https://www.amazon.fr/dp/B004T9WRJK/?coliid=IWKZ281GVG30I&amp;colid=2OVN57DIUA0J
 
 </pre>
 </div>
+<div created="20190301160932076" modified="20190301161324267" tags="fiche_lecture" title="S4ALL débattre">
+<pre>https://www.youtube.com/watch?v=CocRVkQzxfU
+
+```
+
+DÉBATTRE
+s'exprimer
+mieux penser
+clarifier ses propos
+acquérir des info
+comprendre l'autre
+pour le plaisir
+acquérir des arguments
++ convaincre
++ amener [l'autre/le public] à réfléchir
+- combattre l'autre
+- soutenir les nôtres
+- auto-promotion [avoir raison / assoir son autorité / montrer qu'on est qqun de bien]
+
+```
+
+
+</pre>
+</div>
+<div created="20190301161450649" modified="20190301161510859" tags="" title="security">
+<pre>* EVILGINX
+* Justin Izu	https://www.youtube.com/channel/UCe-0FAoHZyDLPMLHnYAuXsw/videos
+* clé U2F		https://u2f-key.tech/fr/
+</pre>
+</div>
 <div created="20190108101014868" modified="20190108101155331" tags="sx" title="Sx">
 <pre>https://forum.sexworkout.net/t/comment-sont-representes-les-mouvements-de-baise-dans-notre-cerveau/468/1
 
@@ -9839,7 +9981,7 @@ A 21 ans j’ai choppé un molluscum contagiosum en couchant avec une fille renc
 
 En gros j’avais des mini verrues sur le pubis et la base de la verge qui étaient très inesthétiques et contagieuses pour mes futures partenaires. A l’époque mon père à qui je m’était confié a été hyper empathique, il m’a amené chez le dermato qui m’a grillé toutes les verrues à l’azote liquide. Il a fallu deux séances intenses pour tout faire disparaitre et que ça ne revienne plus. J’en rigole aujourd’hui mais ce fut assez douloureux.</pre>
 </div>
-<div created="20190130144237309" modified="20190301152933332" tags="" title="Todo">
+<div created="20190130144237309" modified="20190301162949822" tags="" title="Todo">
 <pre>* renouvellement vignette NGE : jusqu'au 31 mars 2019 https://mon.nge-nantes.fr/espace/stationnement
 * inscription école Emma http://www.education.gouv.fr/cid161/l-inscription-a-l-ecole-maternelle.html
 * baptème Emma
@@ -9850,11 +9992,6 @@ En gros j’avais des mini verrues sur le pubis et la base de la verge qui étai
 
 
 ```
-RTTC	31 mai
-baptême	7 juillet
-formation
-salle 28 février
-
 https://fr.wikipedia.org/wiki/Lambda-calcul
 https://brice.coquereau.fr/2019/02/19/fr/chers-recruteurs/
 
@@ -9868,20 +10005,8 @@ https://orientxxi.info/fr/video
 Ligue du LOL	https://fr.wikipedia.org/wiki/Ligue_du_LOL
 Michel Clouscard
 Pierre Kropotkine
-
-https://www.youtube.com/watch?v=3BIuTSK6Br4betterave
-http://les-intoxicateurs.over-blog.com/thierry-casasnovas-cru.html
-pomme
-curcuma
-ail
-piment
-
-betterave
-grenade
-curcuma
-gingembre
-
 ```
+
 </pre>
 </div>
 <div created="20190108085325311" modified="20190201155125598" tags="todo" title="Week">
@@ -9928,8 +10053,13 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * https://fr.wikipedia.org/wiki/Affaire_des_poisons
 </pre>
 </div>
-<div created="20190110133143078" modified="20190228133625737" tags="markups" title="youtube">
-<pre>* inside Jamel Comedy club :  https://www.youtube.com/results?search_query=inside+jamel+comedy+club
+<div created="20190110133143078" modified="20190301162454820" tags="markups" title="youtube">
+<pre>
+! Current
+* https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos
+* https://www.youtube.com/channel/UCax-jgcz74SM3nb19UX_S9g/videos
+
+* inside Jamel Comedy club :  https://www.youtube.com/results?search_query=inside+jamel+comedy+club
 * l'émifion : https://www.youtube.com/results?search_query=l%27%C3%A9mifion
 * JTerre : https://www.youtube.com/channel/UCDoKG5pBrK3XYntCEGal2-w/videos
 * Nicolas Meyrieux : https://www.youtube.com/user/NicolasMeyrieux/videos
@@ -9948,6 +10078,7 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * Grand Angle : https://www.youtube.com/channel/UCWtD8JN9hkxL5TJL_ktaNZA/videos
 * Le Réveilleur : https://www.youtube.com/channel/UC1EacOJoqsKaYxaDomTCTEQ/videos
 * Le Média : https://www.youtube.com/channel/UCT67YOMntJxfRnO_9bXDpvw/videos
+* Adrastia : https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos
 
 ! '' Humour''
 * Verino : https://www.youtube.com/user/verinojpr/videos
@@ -9980,6 +10111,9 @@ https://www.hacking-social.com/2018/07/28/pdf-la-pleine-conscience-de-la-mort/
 * Raptor live : https://www.youtube.com/channel/UCXwyeDdBEaLmrndrY8q_H4Q/videos
 * Philogynes : https://www.youtube.com/channel/UCBVb9MG9nXh0XMee6k44A3A/videos
 * Moodstep : https://www.youtube.com/user/Moodsteptube/videos
+* L'Observateur : https://www.youtube.com/channel/UCSgClHHgppUPYO7PBtVyD7g/videos
+* teddyboy rsa	https://www.youtube.com/channel/UCF5XmjNN3FzNPn_VR1xTr8Q/videos
+* Nico Pène	https://www.youtube.com/user/donfenice/videos?flow=grid&amp;view=0&amp;sort=p
 
 ! Prestidigitation
 * Sankey : https://www.youtube.com/user/SankeyMagic/videos
