--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -203,6 +203,8 @@ Error message and password prompt
 
 <li>card magic</li>
 
+<li>clown</li>
+
 <li>coin magic</li>
 
 <li>CSS</li>
@@ -214,6 +216,8 @@ Error message and password prompt
 <li>dev resources</li>
 
 <li>Eco &amp; Responsable</li>
+
+<li>Emma kid talk</li>
 
 <li>epub</li>
 
@@ -9210,7 +9214,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190301155039330" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190411074120932" list="valeurs youtube Home" modified="20190411111246721" title="$:/StoryList">
+<div created="20190411074120932" list="clown [[Emma kid talk]] youtube Home" modified="20190411111246721" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9542,6 +9546,18 @@ Error message and password prompt
 
 </pre>
 </div>
+<div created="20190412125037156" modified="20190412125300600" tags="clown" title="clown">
+<pre>* 1 : Tout va bien, tout est là
+* 2 : Pour trouver la liberté tu chercheras la contrainte
+* 3 : Tu seras toujours dans le présent et tu arriveras tjs à l'heure
+* 4 : Tu ne seras sûr de rien mais ne douteras jamais
+* 5 : Tu diras toujours oui même quand tu diras non
+* 6 : Tu vivras sans protection, avec tes résistances
+* 7 : Tu seras tjs vif, détendu et élégant
+* 8 : Tu chercheras le petit pour trouver le grand
+* 9 : Tu iras tjs jusqu'au bout
+* 10 : Tu jubileras de tout</pre>
+</div>
 <div created="20190327143035149" modified="20190410160928665" tags="magic coinmagic" title="coin magic">
 <pre>* ''@1'26 -&gt; @1'29 https://www.youtube.com/watch?v=ZQSnMsbcLhI''
 * https://www.youtube.com/watch?v=W1sAkptXwf4
@@ -9773,6 +9789,33 @@ SELECT * FROM v$version;</pre>
 * https://ecoblabla.com/
 
 racloir d'oreille / oriculi / cure-oreill https://www.boutiquezerodechet.com/salle-de-bain-zero-dechet/179-oriculi.html</pre>
+</div>
+<div created="20190412124207841" modified="20190412125022795" tags="Emma" title="Emma kid talk">
+<pre>* 	pop	&gt;&gt;	pomme
+* 	fafé	&gt;&gt;	café
+* 	kuk	&gt;&gt;	sucre
+* 	tat	&gt;&gt;	pâte
+* 	tatate	&gt;&gt;	patate
+* 	la pabab	&gt;&gt;	la cabane
+* 	la passine	&gt;&gt;	la machine (à laver)
+* 	la pature	&gt;&gt;	la voiture
+* 	mamate	&gt;&gt;	tomate
+* 	peuplè	&gt;&gt;	s'il te plait
+* 	assiiii	&gt;&gt;	merci
+* 	fifice	&gt;&gt;	feu d'artifice
+* 	cha à mamou lé mort	&gt;&gt;	
+* 	cocococoïle	&gt;&gt;	crocodile
+* 	maman la mal	&gt;&gt;	maman a mal
+* 	mamiss	&gt;&gt;	maïs
+* 	lelelèle	&gt;&gt;	Emmanuelle
+* 	papu	&gt;&gt;	il n'yen a plus
+* 	nini	&gt;&gt;	fini
+* 	papo	&gt;&gt;	chapeau
+* 	la bite	&gt;&gt;	la musique
+* 	Perfelal	&gt;&gt;	Perceval
+* 	la momie	&gt;&gt;	il a vomi
+* 	tite	&gt;&gt;	frite
+</pre>
 </div>
 <div created="20190410152123321" modified="20190410152151841" tags="epub" title="epub">
 <pre>* http://emmanuel.clement.free.fr/2016/10/28/un-epub-neutre.html
